Adding information about the Zerilli-Armstrong for polymers plasticity model.

--- a/doc/UserGuide/mpm.bib
+++ b/doc/UserGuide/mpm.bib
@@ -6008,6 +6008,15 @@
     PAGES        = "2547--2555",
     }
 %
+@ARTICLE{Zerilli07,
+    AUTHOR       = "Zerilli, F. J. and Armstrong R. W.",
+    YEAR         = "2007",
+    TITLE        = "A constitutive equation for the dynamic deformation behavior of polymers",
+    JOURNAL      = "J. Mater. Sci.",
+    VOLUME       = "42",
+    PAGES        = "4562--4574",
+    }
+%
 @ARTICLE{Zhang88,
     AUTHOR       = "Zhang, W. C.  and Evans, K. E. ", 
     YEAR         = "1988",
