added a section about the simplified GeoModel

--- a/doc/UserGuide/mpm.bib
+++ b/doc/UserGuide/mpm.bib
@@ -6119,3 +6119,15 @@
     PAGES        = "593--714",
     }
 %
+%
+@ARTICLE{Brannon10,
+    AUTHOR       = "Brannon, R. M. and Leelavanichkul, S.",
+    TITLE        = "A multi-stage return algorithm for solving the classical 
+                    damage component of constitutive models for rocks, ceramics,
+                    and other rock-like media ",
+    JOURNAL      = "Int.  J. Fracture",
+    YEAR         = "2010",
+    VOLUME       = "163",
+    PAGES        = "133--149",
+    }
+%
