Fix two typos in installation guide for OSX.

--- a/doc/InstallationGuide/installation_guide.tex
+++ b/doc/InstallationGuide/installation_guide.tex
@@ -1417,7 +1417,7 @@ make -j#
 			../src/configure --with-mpi=/Users/username/uintah/packages/openmpi-1.4.1-install 
 			\--with-hypre=/Users/username/uintah/packages/hypre-2.6.0b-install 
 			\--with-petsc=/Users/username/uintah/packages/petsc-2.3.3-p15-install 
-			\--enable-optimized='-02' \--enable-64bit 
+			\--enable-optimize='-O2' \--enable-64bit 
 			CC=gcc CXX=g++ F77=gfortran CFLAGS=-m64 CXXFLAGS=-m64 FFLAGS=-m64
 			PETSC_ARCH=darwin10.3.1-c-opt USE_ICE=yes USE_MPM=yes
 		\end{verbatim}} %
