--- a/doc/UserGuide/ucf.tex
+++ b/doc/UserGuide/ucf.tex
@@ -180,9 +180,9 @@ name and by convention, the \tt .uda \normalfont suffix is attached denoting the
 
 Data can be saved based on a frequency setting that is either based on time
 intervals;\\
-\tt <outputTimestepInterval> floating\_point\_time\_increment </outputTimestepInterval> \normalfont\\
+\tt <outputTimestepInterval> integer\_number\_of\_steps </outputTimestepInterval> \normalfont\\
 or timestep intervals; \\
-\tt <outputInterval> integer\_number\_of\_steps </outputInterval> \normalfont\\
+\tt <outputInterval> floating\_point\_time\_increment </outputInterval> \normalfont\\
 
 Each simulation component specifies variables with label names that
 can be specified for data output.  By convention, particle data are
